[project]
name = "devops-tools"
version = "0.1.0"
description = "DevOps training utility modules"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=devops_tools --cov-report=term-missing"

[tool.coverage.run]
source = ["devops_tools"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
